compiler-core/src/type_/snapshots/gleam_core__type___tests__javascript_only_function_used_by_erlang_module.snap
---
source: compiler-core/src/type_/tests.rs
expression: "@external(javascript, \"foo\", \"bar\")\npub fn js_only() -> Int\n\npub fn main() {\n  js_only()\n}\n"
---
error: Unsupported target
  ┌─ /src/one/two.gleam:5:3
  │
5 │   js_only()
  │   ^^^^^^^

This value doesn't have an implementation for the Erlang target.

