compiler-core/src/type_/snapshots/gleam_core__type___tests__javascript_targeted_function_cant_contain_erlang_only_function.snap
---
source: compiler-core/src/type_/tests.rs
expression: "@target(javascript)\npub fn javascript_only() -> Int {\n  erlang_only()\n}\n\n@external(erlang, \"foo\", \"bar\")\npub fn erlang_only() -> Int\n    "
---
error: Unsupported target
  ┌─ /src/one/two.gleam:3:3
  │
3 │   erlang_only()
  │   ^^^^^^^^^^^

This value doesn't have an implementation for the JavaScript target.

