compiler-core/src/type_/snapshots/gleam_core__type___tests__private_types_not_available_in_other_modules.snap
---
source: compiler-core/src/type_/tests.rs
expression: "\nimport wibble\n\ntype Wibble {\n  Wibble(wibble.Wibble)\n}\n"
---
----- SOURCE CODE
-- wibble.gleam
type Wibble

-- main.gleam

import wibble

type Wibble {
  Wibble(wibble.Wibble)
}


----- ERROR
error: Use of private type
  ┌─ /src/one/two.gleam:5:10
  │
5 │   Wibble(wibble.Wibble)
  │          ^^^^^^^^^^^^^

`wibble` does define `Wibble`, but it is private and cannot be accessed by
other modules.
